--- a/index.html
+++ b/index.html
@@ -11,30 +11,38 @@
     <title>Astro X</title>
 </head>
 <body>
+  <div class="boton-wpp">
+    <a href="https://api.whatsapp.com/send?phone=542914972306" class="whatsapp" target="_blank">
+      <img src="img/logoastrox.png" alt="logo astro x ">
+      <p> ¡Consultame!</p>
+    </a>
+  </div>
+  
+  <div class="contenedor-menu">
     <header class="header-astrox">
-      <nav class="navbar navbar-expand-lg" style="background-color: #bdfffe;">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img class="logo-astrox" src="img/logoastrox.png" alt=" logo astro x"> </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link " href="#">Sobre Mi</a>
+                <a class="nav-link " href="paginas/sobremi.html">Sobre Mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Carta Natal</a>
+                <a class="nav-link " href="paginas/cartanatal.html">Carta Natal</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Talleres</a>
+                <a class="nav-link " href="paginas/talleres.html">Talleres</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Astro 101</a>
+                <a class="nav-link " href="paginas/astro101.html">Astro 101</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#">Blog</a>
+                <a class="nav-link " href="paginas/blog.html">Blog</a>
               </li>
 
 
@@ -42,17 +50,37 @@
         </div>
       </nav>
     </header>
-
-
+  </div>
 <main>
+  <div class="contenido-principal">
+    <h1> Reconectate con vxs mismx y con el <span> Mundo</span></h1>
+    <p> Bienvenidx a este universo maravilloso, que te va a permitir descubrirte y trasnformarte en profundidad. Todxs tenemos potenciales, luz y sombra dentro nuestro, y es necesario empezar a observarlos más de cerca para poder evolucionar. Te invito a que te aventures en este proceso de auto-descubrimiento, del que vas a salir transformado. <span>¿Te animás a ser parte?. Eric</span> </p>
+    <img src="" alt="">
+  </div>
+  
 
 </main>
 
 
 
 <footer>
+  <div class="footer-contenedor">
+    <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
+    <div class="imagenes-footer">
+      <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+        <img src="img/instalogo.png" alt="instagram logo">
+      </a>
+      <a href="https://www.facebook.com" target="blank" class="facebook">
+        <img src="img/facebooklogo.png" alt="facebook logo">
+      </a>
+      <a href="https://www.youtube.com" target="blank" class="youtube">
+        <img src="img/youtubelogo.png" alt="youtube logo">
+      </a>
+    </div>
+   <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas">Eric Dallas</a> </p>
+    </footer>
+  </div>
 
-</footer>
     
 </body>
 </html>
