se trabajo con flex para acomodar la página, se agregaron imágenes, p, y h

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 <body>
   <div class="boton-wpp">
     <a href="https://api.whatsapp.com/send?phone=542914972306" class="whatsapp" target="_blank">
-      <img src="img/logoastrox.png" alt="logo astro x ">
-      <p> ¡Consultame!</p>
+      <img src="img/logoastrox.png" alt="logo astro x "> 
     </a>
+    <p> ¡Consultame!</p>
   </div>
-  
   <div class="contenedor-menu">
     <header class="header-astrox">
       <nav class="navbar navbar-expand-lg">
@@ -44,25 +43,37 @@
               <li class="nav-item">
                 <a class="nav-link " href="paginas/blog.html">Blog</a>
               </li>
-
-
           </div>
         </div>
       </nav>
     </header>
   </div>
+  <div class="barra-separadora">
+    <img src="img/barra-separadora.gif" alt="barra separadora estrellas">
+  </div>
 <main>
   <div class="contenido-principal">
-    <h1> Reconectate con vxs mismx y con el <span> Mundo</span></h1>
+    <h1> Reconectate con vxs Mismx y con el <span> Mundo</span></h1>
     <p> Bienvenidx a este universo maravilloso, que te va a permitir descubrirte y trasnformarte en profundidad. Todxs tenemos potenciales, luz y sombra dentro nuestro, y es necesario empezar a observarlos más de cerca para poder evolucionar. Te invito a que te aventures en este proceso de auto-descubrimiento, del que vas a salir transformado. <span>¿Te animás a ser parte?. Eric</span> </p>
-    <img src="" alt="">
+  </div>
+</main>
+<div class="barra-separadora">
+  <img src="img/barra-separadora.gif" alt="barra separadora estrellas">
+</div>
+<section>
+  <div class="section-astrox">
+    <h2> Adentrate en tu Carta Natal.</h2>
+    <p> Vamos a conocer que energías acompañan tu existencia, como reconocerlas, aprovecharlas y como empezar a salir de los circulos de repetición.</p>
+    <div class="cartanatal-index">
+      <img src="img/carta-ejemplo.png" alt="carta natal de ejemplo">
+    </div>
+    
   </div>
   
-
-</main>
-
-
-
+</section>
+<div class="barra-separadora">
+  <img src="img/barra-separadora.gif" alt="barra separadora estrellas">
+</div>
 <footer>
   <div class="footer-contenedor">
     <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
