se agrego una section, se trabajo con flex en los divs para acomodar el index

--- a/index.html
+++ b/index.html
@@ -64,16 +64,71 @@
   <div class="section-astrox">
     <h2> Adentrate en tu Carta Natal.</h2>
     <p> Vamos a conocer que energías acompañan tu existencia, como reconocerlas, aprovecharlas y como empezar a salir de los circulos de repetición.</p>
-    <div class="cartanatal-index">
-      <img src="img/carta-ejemplo.png" alt="carta natal de ejemplo">
+    <div class="cartanatal-servicios">
+      <div class="cartanatal-index"> <!-- este div es circular-->
+        <a href="paginas/cartanatal.html">
+          <img src="img/carta-ejemplo.png" alt="carta natal de ejemplo">
+        </a>
+    </div>
+    <div class="servicios-texto">
+      <p>¿Qué contiene la Carta?</p>
+      <ul>
+        <li>Sol, Luna y Ascendente (como energías principales)</li>
+        <li>Cómo te vinculas (Venus) y como te lanzás por lo que querés (Marte)</li>
+        <li>Potenciales en luz y en sombra. (Aprenderemos a despertarlos)</li>
+        <li>Energías dentro tuyo, como se manifiestan, como reconocerlas e integrarlas</li>
+        <li>Herramientas para el auto-cuidado (que te permitan expandirte y transformarte)</li>
+      </ul>
+      <a href=""> Informe Escrito</a>
+      <a href="">Servicio Online (zoom)</a>
     </div>
     
   </div>
-  
+  </div>
 </section>
 <div class="barra-separadora">
   <img src="img/barra-separadora.gif" alt="barra separadora estrellas">
 </div>
+<section class="carousel">
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section>
 <footer>
   <div class="footer-contenedor">
     <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
