--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="nav-link " href="paginas/cartanatal.html">Carta Natal</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="paginas/talleres.html">Talleres</a>
+                <a class="nav-link " href="paginas/talleres.html">Cursos y Talleres</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="paginas/astro101.html">Astro 101</a>
@@ -98,9 +98,9 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="img/conociendo-pluton.jpg" class="conociendo-pluton" alt="tarjeta de pluton">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
+          <h5>El Planeta de la Transformación</h5>
           <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
@@ -129,6 +129,9 @@
     </button>
   </div>
 </section>
+<div class="barra-separadora">
+  <img src="img/barra-separadora.gif" alt="barra separadora estrellas">
+</div>
 <footer>
   <div class="footer-contenedor">
     <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
