--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="boton-wpp">
-    <a href="https://api.whatsapp.com/send?phone=542914972306" class="whatsapp" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
       <img src="img/logoastrox.png" alt="logo astro x "> 
     </a>
     <p> ¡Consultame!</p>
@@ -89,6 +89,8 @@
 <div class="barra-separadora">
   <img src="img/barra-separadora.gif" alt="barra separadora estrellas">
 </div>
+
+<!-- carousel-->
 <section class="carousel">
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
@@ -105,14 +107,14 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="img/conociendo-jupiter.jpg" class="conociendo-jupiter" alt="tarjeta de jupiter">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
+          <h5>Hablemos de expandirnos</h5>
           <p>Some representative placeholder content for the second slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="img/conociendo-luna.jpg" class="conociendo-luna" alt="tarjeta de la luna">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -149,6 +151,9 @@
    <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas">Eric Dallas</a> </p>
     </footer>
   </div>
+
+  <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     
 </body>
