--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Astro X</title>
 </head>
 <body>
+  <video src="img/video-fondo.mp4" autoplay loop muted></video>
   <div class="boton-wpp">
     <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
       <img src="img/logoastrox.png" alt="logo astro x "> 
@@ -38,7 +39,7 @@
                 <a class="nav-link " href="paginas/talleres.html">Cursos y Talleres</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="paginas/astro101.html">Astro 101</a>
+                <a class="nav-link " href="paginas/astro101.html">Astro Adicto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="paginas/blog.html">Blog</a>
@@ -48,22 +49,18 @@
       </nav>
     </header>
   </div>
-  <div class="barra-separadora">
-    <img src="img/barra-separadora.gif" alt="barra separadora estrellas">
-  </div>
+<!-- main -->
 <main>
   <div class="contenido-principal">
     <h1> Reconectate con vxs Mismx y con el <span> Mundo</span></h1>
     <p> Bienvenidx a este universo maravilloso, que te va a permitir descubrirte y trasnformarte en profundidad. Todxs tenemos potenciales, luz y sombra dentro nuestro, y es necesario empezar a observarlos más de cerca para poder evolucionar. Te invito a que te aventures en este proceso de auto-descubrimiento, del que vas a salir transformado. <span>¿Te animás a ser parte?. Eric</span> </p>
   </div>
 </main>
-<div class="barra-separadora">
-  <img src="img/barra-separadora.gif" alt="barra separadora estrellas">
-</div>
+<!-- section carta astral-->
 <section>
   <div class="section-astrox">
-    <h2> Adentrate en tu Carta Natal.</h2>
-    <p> Vamos a conocer que energías acompañan tu existencia, como reconocerlas, aprovecharlas y como empezar a salir de los circulos de repetición.</p>
+    <h2> Adentrate en tu Carta Natal</h2>
+    <p class="texto-h2"> Vamos a conocer que energías acompañan tu existencia, como reconocerlas, aprovecharlas y como empezar a salir de los circulos de repetición.</p>
     <div class="cartanatal-servicios">
       <div class="cartanatal-index"> <!-- este div es circular-->
         <a href="paginas/cartanatal.html">
@@ -86,11 +83,21 @@
   </div>
   </div>
 </section>
-<div class="barra-separadora">
-  <img src="img/barra-separadora.gif" alt="barra separadora estrellas">
-</div>
 
-<!-- carousel-->
+<!-- section de cursos y talleres-->
+<section>
+  <div class="texto-cursos">
+    <h3 class="cursos"> Cursos y Talleres</h3>
+    <p>En nuestros Cursos y Talleres, vas a poder profundizar en diversos temas (Lunas, Ascendentes, Venus, Marte, etc..). Contamos con clases en vivo (por Zoom) o clases grabadas, ¡para que las veas en el momento que vos quieras!. Al finalizar te enviaremos un certificado de participación a modo de recuerdo. A continuación te dejamos el video de La Luna en Cáncer, a modo de prueba.</p>
+  </div>
+  <div class="video-youtube">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CiCYqcCzKpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  
+</section>
+
+
+<!-- section astro adicto carousel-->
 <section class="carousel">
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
@@ -131,9 +138,7 @@
     </button>
   </div>
 </section>
-<div class="barra-separadora">
-  <img src="img/barra-separadora.gif" alt="barra separadora estrellas">
-</div>
+
 <footer>
   <div class="footer-contenedor">
     <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
