se trabajo en la pagina sobremi.html con grid, agregando imagenes y texto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
       <img src="img/logoastrox.png" alt="logo astro x "> 
     </a>
-    <p> ¡Consultame!</p>
+    <p class="hablemos"> ¡Hablemos!</p>
+  
   </div>
   <div class="contenedor-menu">
     <header class="header-astrox">
@@ -39,7 +40,7 @@
                 <a class="nav-link " href="paginas/talleres.html">Cursos y Talleres</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="paginas/astro101.html">Astro Adicto</a>
+                <a class="nav-link " href="paginas/astro101.html">Astro 101</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="paginas/blog.html">Blog</a>
@@ -52,12 +53,18 @@
 <!-- main -->
 <main>
   <div class="contenido-principal">
-    <h1> Reconectate con vxs Mismx y con el <span> Mundo</span></h1>
-    <p> Bienvenidx a este universo maravilloso, que te va a permitir descubrirte y trasnformarte en profundidad. Todxs tenemos potenciales, luz y sombra dentro nuestro, y es necesario empezar a observarlos más de cerca para poder evolucionar. Te invito a que te aventures en este proceso de auto-descubrimiento, del que vas a salir transformado. <span>¿Te animás a ser parte?. Eric</span> </p>
+    <h1> Reconectate con vos Mismx y con el <span> Mundo</span></h1>
+    <div class="bloque-imagenes">
+      <p> Bienvenidx a este universo maravilloso, que te va a permitir descubrirte y trasnformarte en profundidad. Todxs tenemos potenciales, luz y sombra dentro nuestro, y es necesario empezar a observarlos más de cerca para poder evolucionar. </span> </p>
+      <img src="img/mano-astro.png" alt=" imagen de manos y mundo astrologico" class="mano">
+      <p>Te invito a que te aventures en este proceso de auto-descubrimiento, del que vas a salir transformado.<span> ¿Te animás a ser parte y cambiar la percepción de tu mundo tal como lo conocías?. Eric</p>
+    </div>
+    
+    
   </div>
 </main>
 <!-- section carta astral-->
-<section>
+<section class="section-carta">
   <div class="section-astrox">
     <h2> Adentrate en tu Carta Natal</h2>
     <p class="texto-h2"> Vamos a conocer que energías acompañan tu existencia, como reconocerlas, aprovecharlas y como empezar a salir de los circulos de repetición.</p>
@@ -85,9 +92,9 @@
 </section>
 
 <!-- section de cursos y talleres-->
-<section>
+<section class="section-cursos">
   <div class="texto-cursos">
-    <h3 class="cursos"> Cursos y Talleres</h3>
+    <h3 class="cursos"> <a href="talleres.html">Cursos y Talleres</a></h3>
     <p>En nuestros Cursos y Talleres, vas a poder profundizar en diversos temas (Lunas, Ascendentes, Venus, Marte, etc..). Contamos con clases en vivo (por Zoom) o clases grabadas, ¡para que las veas en el momento que vos quieras!. Al finalizar te enviaremos un certificado de participación a modo de recuerdo. A continuación te dejamos el video de La Luna en Cáncer, a modo de prueba.</p>
   </div>
   <div class="video-youtube">
@@ -149,12 +156,12 @@
       <a href="https://www.facebook.com" target="blank" class="facebook">
         <img src="img/facebooklogo.png" alt="facebook logo">
       </a>
-      <a href="https://www.youtube.com" target="blank" class="youtube">
+      <a href="https://www.youtube.com/@astro.x" target="blank" class="youtube">
         <img src="img/youtubelogo.png" alt="youtube logo">
       </a>
     </div>
-   <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas">Eric Dallas</a> </p>
-    </footer>
+   <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas" target="blank">Eric Dallas</a> </p>
+    </footer> 
   </div>
 
   <!-- JavaScript Bundle with Popper -->
