se trabajo agregando header, footer y fondo a todas las páginas, se utilizo flex para crear tarjeras en la página talleres

--- a/paginas/talleres.html
+++ b/paginas/talleres.html
@@ -1,2 +1,97 @@
 <!-- aca quiero trabajar grid, para poner varios cuadritos, que tengan info de los talleres
 ¿como meto el video? no se-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- link css-->
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>Cursos y Talleres</title>
+</head>
+<body>
+    <video src="../img/video-fondo.mp4" autoplay loop muted></video>
+    <div class="boton-wpp">
+      <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
+        <img src="../img/logoastrox.png" alt="logo astro x "> 
+      </a>
+      <p class="hablemos"> ¡Hablemos!</p>
+    </div>
+    <!-- Header..........-->
+    <div class="contenedor-menu">
+        <header class="header-astrox">
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html">
+                <img class="logo-astrox" src="../img/logoastrox.png" alt=" logo astro x"> </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link " href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="../paginas/sobremi.html">Sobre Mi</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="../paginas/cartanatal.html">Carta Natal</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="../paginas/astro101.html">Astro 101</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="../paginas/blog.html">Blog</a>
+                  </li>
+              </div>
+            </div>
+          </nav>
+        </header>
+      </div>
+      <!-- arranca el main------------>
+<main class="main-talleres">
+   <div class="taller-luna">
+   <h2 class="h2-luna"> Taller Luna Natal</h2>
+   <p class="p-luna">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio exercitationem nulla consequatur odio nostrum aut ratione repellendus dignissimos    voluptatibus eum pariatur consectetur, eos numquam architecto. Placeat quidem doloremque praesentium doloribus?</p>
+   </div>
+   <div class="taller-ascendente">
+   <h2 class="h2-ascendente"> Taller Ascendente</h2>
+   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis debitis incidunt ullam earum nemo saepe vero atque tempora esse sequi magnam, eligendi    quis, numquam alias asperiores dolore, pariatur quibusdam eveniet!</p>
+   </div>
+   <div class="taller-marte">
+   <h2 class="h2-marte"> Taller Marte Natal</h2>
+   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quas facilis laborum doloribus iste minus, dignissimos, optio adipisci quo, expedita    nihil necessitatibus cum provident tenetur voluptatum voluptatibus laudantium voluptas eos.</p>
+   </div>
+   <div class="taller-venus">
+    <div class="venus-titulo">
+        <h2 class="h2-venus">Taller Venus Natal</h2>
+        <img class="venus" src="../img/venus.png" alt="">
+    </div>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus rerum assumenda, nam eveniet amet quod eius neque suscipit minus veniam debitis    velit dicta sunt voluptatem modi dignissimos voluptates dolorem doloribus.</p>
+   </div>
+</main>
+    <footer>
+        <div class="footer-contenedor">
+          <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
+          <div class="imagenes-footer">
+            <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+              <img src="../img/instalogo.png" alt="instagram logo">
+            </a>
+            <a href="https://www.facebook.com" target="blank" class="facebook">
+              <img src="../img/facebooklogo.png" alt="facebook logo">
+            </a>
+            <a href="https://www.youtube.com/@astro.x" target="blank" class="youtube">
+              <img src="../img/youtubelogo.png" alt="youtube logo">
+            </a>
+          </div>
+         <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas" target="blank">Eric Dallas</a> </p>
+    </footer> 
+      
+        <!-- JavaScript Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</body>
+</html>
