--- a/paginas/cartanatal.html
+++ b/paginas/cartanatal.html
@@ -55,25 +55,31 @@
         <h1>El primer paso es cuestionarse..</h1>
         <p> ¿Alguna vez viste tu Carta?. En esta sección podes solicitar tu reporte escrito (son muchas pero muchas páginas para que puedas leer con calma, sobre tus signos, planetas y posiciones) o podemos agendar una sesión online, en la que además de la charla en la que nos metemos de lleno en tu carta, te llevas también el informe escrito. Si llegaste hasta acá, es solo dar el próximo paso. ¿Qué esperás?.</p>
 </main>
+<!-- section servicio de cartas-->
 <section class="servicios">
-    <div class="carta-escrita">
-         <h2 class="h2-carta-escrita"><a href="">Carta Natal (Informe escrito)</a> </h2>
-         <p class="texto-carta-escrita">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora sint mollitia recusandae aliquid dicta molestiae, nobis neque, commodi harum soluta ea corrupti sit, aperiam atque cum itaque aspernatur dolor laudantium! </p>
-    </div>
-    <div class="carta-escrita-revo">
-        <h2 class="h2-carta-escrita-revo"> <a href="">Cara Natal + Revolución Solar (Informe Escrito)</a></h2>
-        <p class="texto-carta-escrita-revo"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, voluptatum debitis iure magni perspiciatis laudantium quam doloremque temporibus est maxime saepe suscipit. Corrupti repellendus numquam magni doloribus ad sint rerum?</p>
-    </div>
     <div class="carta-online">
-        <h2 class="h2-carta-online"> <a href="">Carta Natal (Online)</a> </h2>
+      <!-- Principio del widget de enlace de Calendly -->
+        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+        <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/lectura-de-carta-natal'});return false;">Carta Natal (Online)</a></h2>
+        <!-- Final del widget de enlace de Calendly -->
         <p class="texto-carta-online"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita asperiores quasi illo consequuntur possimus odio rem recusandae sint ex deleniti eaque ipsam, quis at ratione aut iste omnis temporibus? Odio.</p>
-        
     </div>
     <div class="carta-revo">
-        <h2 class="h2-carta-revo"><a href="">Carta Natal + Revolución Solar (Online)</a></h2>
+        <!-- Principio del widget de enlace de Calendly -->
+        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+        <h2 class="h2-carta-revo"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/carta-natal-revo'});return false;">Carta Natal + Revolución Solar (Online)</a></h2>
         <p class="texto-carta-revo"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit libero voluptatum deleniti quae! Doloremque ullam iure rem, natus ipsam excepturi possimus ab incidunt aliquam nulla vel pariatur architecto enim aliquid.</p>
     </div>
-
+    <div class="carta-escrita">
+      <h2 class="h2-carta-escrita"><a href="">Carta Natal (Informe escrito)</a> </h2>
+      <p class="texto-carta-escrita">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora sint mollitia recusandae aliquid dicta molestiae, nobis neque, commodi harum soluta ea corrupti sit, aperiam atque cum itaque aspernatur dolor laudantium! </p>
+ </div>
+ <div class="carta-escrita-revo">
+     <h2 class="h2-carta-escrita-revo"> <a href="">Cara Natal + Revolución Solar (Informe Escrito)</a></h2>
+     <p class="texto-carta-escrita-revo"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, voluptatum debitis iure magni perspiciatis laudantium quam doloremque temporibus est maxime saepe suscipit. Corrupti repellendus numquam magni doloribus ad sint rerum?</p>
+ </div>
 </section>
 <section class="preguntas-frecuentes">
   <div class="divisor-preguntas">
@@ -107,8 +113,6 @@
           </div>
          <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas" target="blank">Eric Dallas</a> </p>
 </footer> 
-        </div>
-      
         <!-- JavaScript Bundle with Popper -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
