se trabajo en media queries (desktop first) para hacer la pagina responisve para mobile)

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <img src="img/carta-ejemplo.png" alt="carta natal de ejemplo">
         </a>
     </div>
+    <h3>¿Qué contiene la Carta?</h3>
     <div class="servicios-texto">
-      <p>¿Qué contiene la Carta?</p>
       <ul>
         <li>Sol, Luna y Ascendente (como energías principales)</li>
         <li>Cómo te vinculas (Venus) y como te lanzás por lo que querés (Marte)</li>
