--- a/paginas/pluton.html
+++ b/paginas/pluton.html
@@ -1,5 +1,3 @@
-<!-- aca quiero trabajar grid, para poner varios cuadritos, que tengan info de los talleres
-¿como meto el video? no se-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- Animate on scroll CSS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- link css-->
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Cursos y Talleres</title>
+    <title>Plutón</title>
 </head>
 <body>
     <video src="../img/video-fondo.mp4" autoplay loop muted></video>
@@ -42,6 +42,9 @@
                     <a class="nav-link " href="../paginas/cartanatal.html">Carta Natal</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link " href="../paginas/talleres.html">Cursos y Talleres</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link " href="../paginas/astro101.html">Astro 101</a>
                   </li>
                   <li class="nav-item">
@@ -52,38 +55,10 @@
           </nav>
         </header>
       </div>
-      <!-- arranca el main------------>
-<main class="main-talleres">
-   <div class="taller-luna">
-    <img src="" alt="">
-    <div class="luna-titulo">
-      <h2 class="h2-luna"> Taller Luna Natal</h2>
-      <p class="p-luna">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio exercitationem nulla consequatur odio nostrum aut ratione repellendus dignissimos    voluptatibus eum pariatur consectetur, eos numquam architecto. Placeat quidem doloremque praesentium doloribus?</p>
-    </div>
-   </div>
-   <div class="taller-ascendente">
-    <img src="" alt="">
-    <div class="ascendente-titulo">
-      <h2 class="h2-ascendente"> Taller Ascendente</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis debitis incidunt ullam earum nemo saepe vero atque tempora esse sequi magnam, eligendi    quis, numquam alias asperiores dolore, pariatur quibusdam eveniet!</p>
-    </div>
-   </div>
-   <div class="taller-marte">
-    <img src="" alt="">
-    <div class="marte-titulo">
-      <h2 class="h2-marte"> Taller Marte Natal</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quas facilis laborum doloribus iste minus, dignissimos, optio adipisci quo, expedita    nihil necessitatibus cum provident tenetur voluptatum voluptatibus laudantium voluptas eos.</p>
-    </div>
-   </div>
-   <div class="taller-venus">
-    <img class="venus" src="../img/venus.png" alt="">
-    <div class="venus-titulo">
-      <h2 class="h2-venus">Taller Venus Natal</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus rerum assumenda, nam eveniet amet quod eius neque suscipit minus veniam debitis    velit dicta sunt voluptatem modi dignissimos voluptates dolorem doloribus.</p>
-    </div>
-   </div>
+<main><h1> #Serie: Conociendo de cerca, hoy Plutón.</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam minus iusto veritatis cumque sapiente dolores in a officia sed illo quam aperiam, totam est corporis cum dolorem quae ex? Deleniti?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, cupiditate blanditiis eaque nobis dolore soluta quo eligendi alias. Veritatis rem soluta delectus reiciendis temporibus explicabo et illo sit debitis impedit.</p>
 </main>
-    <footer>
+<footer>
         <div class="footer-contenedor">
           <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
           <div class="imagenes-footer">
@@ -98,9 +73,9 @@
             </a>
           </div>
          <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas" target="blank">Eric Dallas</a> </p>
-    </footer> 
-      
-        <!-- JavaScript Bundle with Popper -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</footer> 
+     <!-- JavaScript Bundle with Popper -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+     
 </body>
 </html>
