se trabajo en responsive para tablet y mobile, se corrigieron anidados en sass

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
         <a href="paginas/cartanatal.html">
           <img src="img/carta-ejemplo.png" alt="carta natal de ejemplo">
         </a>
+      </div>
     </div>
-    <h3>¿Qué contiene la Carta?</h3>
     <div class="servicios-texto">
+      <h3>¿Qué contiene la Carta?</h3>
       <ul>
         <li>Sol, Luna y Ascendente (como energías principales)</li>
         <li>Cómo te vinculas (Venus) y como te lanzás por lo que querés (Marte)</li>
@@ -82,11 +83,9 @@
         <li>Energías dentro tuyo, como se manifiestan, como reconocerlas e integrarlas</li>
         <li>Herramientas para el auto-cuidado (que te permitan expandirte y transformarte)</li>
       </ul>
-      <a href=""> Informe Escrito</a>
-      <a href="">Servicio Online (zoom)</a>
     </div>
-    
-  </div>
+    <a href=""> Informe Escrito</a>
+    <a href="">Servicio Online (zoom)</a>
   </div>
 </section>
 
@@ -105,6 +104,7 @@
 
 <!-- section astro adicto carousel-->
 <section class="carousel">
+  <h4> Astro 101</h4>
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
