se trabajo en responsibe para mobile

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
   </div>
 <!-- main -->
-<main>
+<main class="main-index">
   <div class="contenido-principal">
     <h1> Reconectate con vos Mismx y con el <span> Mundo</span></h1>
     <div class="bloque-imagenes">
@@ -146,6 +146,22 @@
 </section>
 
 <footer>
+  <!-- footer mobile-->
+  <div class="footer-mobile">
+    <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
+    <div class="imagenes-footer">
+      <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+        <img src="img/instalogo.png" alt="instagram logo">
+      </a>
+      <a href="https://www.facebook.com" target="blank" class="facebook">
+        <img src="img/facebooklogo.png" alt="facebook logo">
+      </a>
+      <a href="https://www.youtube.com/@astro.x" target="blank" class="youtube">
+        <img src="img/youtubelogo.png" alt="youtube logo">
+      </a>
+    </div>
+    <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas" target="blank">Eric Dallas</a> </p>
+  </div> <!-- footer tablet/desktop-->
   <div class="footer-contenedor">
     <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
     <div class="imagenes-footer">
