se trabajo en respondibe mobile y tablet en pagina sobremi

--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     </a>
     <p class="hablemos"> ¡Hablemos!</p>
   </div>
+<!-- Aca esta el menu de bs-->
   <div class="contenedor-menu">
     <header class="header-astrox">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img class="logo-astrox" src="img/logoastrox.png" alt=" logo astro x"> </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
+          <a class="navbar-brand" href="index.html">
+            <img class="logo-astrox" src="img/logoastrox.png" alt=" logo astro x"> </a>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
