--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -23,11 +23,11 @@
             <header class="header-astrox">
               <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="../index.html">
-                    <img class="logo-astrox" src="../img/logoastrox.png" alt=" logo astro x"> </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                   </button>
+                  <a class="navbar-brand" href="../index.html">
+                    <img class="logo-astrox" src="../img/logoastrox.png" alt=" logo astro x"> </a>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                       <li class="nav-item">
@@ -68,10 +68,17 @@
           <h3 class="h3-astro">¿Por qué Astrología?</h3>
           <p class="historia-astro"> ¿Todavía no hablé de Astrología? -Es que lo mejor queda para el final. El camino de la Astrología para mi fue un punto de partida enorme, para realmente empezar a verme y conocerme por quien soy yo y no por lo que sentía que el resto quería ver. Me conecto con partes mías que estaban tan dormidas y tan tapadas, que no tenia idea que me pertenecian (claramente se las proyectaba a algun otro) y así de a poco, con mucha curiosidad entre medio (pues ascendente Géminis y Luna en casa 3) empecé a interiorizarme en este universo de conocimiento, en el que siempre tenés algo más para aprender. Me abrio las puertas a ir mas allá de mi perspectiva del mundo y la amplio de una manera, que me encantaría que todxs puedan acceder a ella. Por ultimo, (sí, ya termino, bancame) es mi deseo que a traves de esta maravillosa herramienta, puedan empezar a hacerse las preguntas correctas, que lxs lleven a cuestionar sus verdades mas arraigadas, y así empezar a transitar un camino de auto-desucbrimiento del que, dejame decirte, no hay retorno, porque una vez que empezas a VER realmente, el efecto dominó que se produce en tu vida es impresionante y creeme que te va a llevar a donde ténes que estar..</p>
         </div>
+        <div class="historia-mia-mobile">
+          <img class="imagen-eric" src="../img/Eric.png" alt="Foto de Eric">
+          <h2 class="h2-historia"> Ponganse cómodoxs, que les cuento un poco de mi historia..</h2>
+          <p class="historia"> Nací el 23 de Junio de 1993, un día Miércoles, en la ciudad de Bahía Blanca, Provincia de Buenos Aires (Argentina). Desde muy chico me interesé en todas las cosas que se escapaban de la visión tradicional que tenian el resto de las personas sobre el mundo. Siempre sentía que habia algo mas alla de mi mismo, de todxs y que no se podían explicar ni razonar, pero estaba. Tengo el recuerdo de pasar horas leyendo libros que explicaban las energías que contenían los cuarzos, como podías conectarte con su esencia para recibir su información, como sentir su energía y como te potenciaba entrar en contacto con esa roca tan llena de vida. Mi infancia fue una experiencia muy linda, llena de constantes aventuras, amistadas, barrio, exploraciones por todos lados, vivía moviendome tanto, que cada dos por tres terminaba en el hospital con algun accidente. En mi familia también (sobre todo siguiendo la linea Materna, como buen Canceriano que soy) habia una cierta predisposición en ahondar los misterios de la vida, las energías que traemos, conectarse con planos que son muy sutiles para la percepción de todxs. Como podrán ver, lo que estoy haciendo ahora, ya venia sucediendo hace rato, nada mas que llegó en el momento que tenía que llegar, ni un minuto antes, ni un minuto después. Ahora de adulto, entre medio de un montón de crisis, muertes, renacimientos (sobre todo cuando empece a tener el retorno de Saturno), le quise dar forma a toda esta energía e infromación que me pedía salir por algún lado, tome fuerza y me anime a dar ese salto mas alla de mis propios límites, esos límites que a veces uno se pone para no tener que hacer los cambios, que en el fondo sabemos que son necesarios.  </p>
+          <h3 class="h3-astro">¿Por qué Astrología?</h3>
+          <p class="historia-astro"> ¿Todavía no hablé de Astrología? -Es que lo mejor queda para el final. El camino de la Astrología para mi fue un punto de partida enorme, para realmente empezar a verme y conocerme por quien soy yo y no por lo que sentía que el resto quería ver. Me conecto con partes mías que estaban tan dormidas y tan tapadas, que no tenia idea que me pertenecian (claramente se las proyectaba a algun otro) y así de a poco, con mucha curiosidad entre medio (pues ascendente Géminis y Luna en casa 3) empecé a interiorizarme en este universo de conocimiento, en el que siempre tenés algo más para aprender. Me abrio las puertas a ir mas allá de mi perspectiva del mundo y la amplio de una manera, que me encantaría que todxs puedan acceder a ella. Por ultimo, (sí, ya termino, bancame) es mi deseo que a traves de esta maravillosa herramienta, puedan empezar a hacerse las preguntas correctas, que lxs lleven a cuestionar sus verdades mas arraigadas, y así empezar a transitar un camino de auto-desucbrimiento del que, dejame decirte, no hay retorno, porque una vez que empezas a VER realmente, el efecto dominó que se produce en tu vida es impresionante y creeme que te va a llevar a donde ténes que estar..</p>
+        </div>
       </main>
       <!-- section contenido de carta Eric-->
         <section class="eric-carta">
-          <h4> Miremos un poco mi Carta:</h4>
+          <h4 class="h4-micarta"> Miremos un poco mi Carta:</h4>
           <div class="mi-carta">
             <div class="imagen-carta">
               <img src="../img/carta-ejemplo.png" alt="carta natal Eric">
@@ -98,6 +105,22 @@
         
     
     <footer>
+  <!-- footer mobile-->
+  <div class="footer-mobile">
+    <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
+    <div class="imagenes-footer">
+      <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+        <img src="../img/instalogo.png" alt="instagram logo">
+      </a>
+      <a href="https://www.facebook.com" target="blank" class="facebook">
+        <img src="../img/facebooklogo.png" alt="facebook logo">
+      </a>
+      <a href="https://www.youtube.com/@astro.x" target="blank" class="youtube">
+        <img src="../img/youtubelogo.png" alt="youtube logo">
+      </a>
+    </div>
+    <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas" target="blank">Eric Dallas</a> </p>
+    <!-- footer desktop -->
       <div class="footer-contenedor">
         <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
         <div class="imagenes-footer">
