se trabajo en responsive design páginas carta natal y cursos

--- a/paginas/talleres.html
+++ b/paginas/talleres.html
@@ -25,11 +25,11 @@
         <header class="header-astrox">
           <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html">
-                <img class="logo-astrox" src="../img/logoastrox.png" alt=" logo astro x"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
+              <a class="navbar-brand" href="../index.html">
+                <img class="logo-astrox" src="../img/logoastrox.png" alt=" logo astro x"> </a>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
@@ -53,7 +53,7 @@
         </header>
       </div>
       <!-- arranca el main------------>
-<main class="main-talleres">
+<main id="main-talleres-id" class="main-talleres main-talleres-tablet">
    <div class="taller-luna">
     <img src="" alt="">
     <div class="luna-titulo">
@@ -84,6 +84,23 @@
    </div>
 </main>
     <footer>
+       <!-- footer mobile-->
+       <div class="footer-mobile">
+        <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
+        <div class="imagenes-footer">
+          <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+            <img src="../img/instalogo.png" alt="instagram logo">
+          </a>
+          <a href="https://www.facebook.com" target="blank" class="facebook">
+            <img src="../img/facebooklogo.png" alt="facebook logo">
+          </a>
+          <a href="https://www.youtube.com/@astro.x" target="blank" class="youtube">
+            <img src="../img/youtubelogo.png" alt="youtube logo">
+          </a>
+        </div>
+        <p class="derechos"> Todos los derechos reservados. Creado por <a href="https://instagram.com/eric.dallas" target="blank">Eric       Dallas</a> </p>
+      </div>
+      <!-- footer desktop-->
         <div class="footer-contenedor">
           <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
           <div class="imagenes-footer">
