--- a/paginas/talleres.html
+++ b/paginas/talleres.html
@@ -53,7 +53,7 @@
         </header>
       </div>
       <!-- arranca el main------------>
-<main id="main-talleres-id" class="main-talleres main-talleres-tablet">
+<main id="main-talleres-id" class="main-talleres">
    <div class="taller-luna">
     <img src="" alt="">
     <div class="luna-titulo">
