se trabajo con bs, corrigiendo detalles

--- a/paginas/astro101.html
+++ b/paginas/astro101.html
@@ -61,7 +61,7 @@
     <main id="main-101-id" class="main-101">
         <h1>Astro 101: Nuestra Sección dedicada para que sigas aprendiendo</h1>
         <div id="dropdown-id" class="dropdown">
-          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="btn btn-secondary btn-lg dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Artículos
           </a>
           <ul class="dropdown-menu">
